package bo.capital.tec.pet.common.kafka;

import bo.capital.tec.pet.common.event.DomainEvent;
import org.apache.kafka.clients.admin.AdminClientConfig;
import org.apache.kafka.clients.admin.NewTopic;
import org.springframework.beans.factory.annotation.Value;
import org.springframework.context.annotation.Bean;
import org.springframework.context.annotation.Configuration;
import org.springframework.kafka.config.TopicBuilder;
import org.springframework.kafka.core.KafkaAdmin;

import java.util.HashMap;
import java.util.Map;

@Configuration
public class KafkaTopicConfig {

    @Value("${app.kafka.topic.reserva-creada:reserva.creada}")
    private String reservaCreadaTopic;

    @Value("${app.kafka.topic.reserva-cancelada:reserva.cancelada}")
    private String reservaCanceladaTopic;

    @Value("${app.kafka.topic.dlt:reserva.dlt.v1}")
    private String deadLetterTopic;

    @Value("${app.kafka.bootstrap-servers:localhost:9093}")
    private String bootstrapServers;

    @Value("${app.kafka.partitions:3}")
    private int partitions;

    @Value("${app.kafka.replication-factor:1}")
    private short replicationFactor;

    @Value("${app.kafka.retention-ms:604800000}")
    private long retentionMs;

    @Bean
    public KafkaAdmin kafkaAdmin() {
        Map<String, Object> configs = new HashMap<>();
        configs.put(AdminClientConfig.BOOTSTRAP_SERVERS_CONFIG, bootstrapServers);
        return new KafkaAdmin(configs);
    }

    @Bean
    public NewTopic reservaCreadaTopic() {
        return TopicBuilder.name(reservaCreadaTopic)
                .partitions(partitions)
                .replicas(replicationFactor)
                .config("retention.ms", String.valueOf(retentionMs))
                .config("cleanup.policy", "delete")
                .build();
    }

    @Bean
    public NewTopic reservaCanceladaTopic() {
        return TopicBuilder.name(reservaCanceladaTopic)
                .partitions(partitions)
                .replicas(replicationFactor)
                .config("retention.ms", String.valueOf(retentionMs))
                .config("cleanup.policy", "delete")
                .build();
    }

    @Bean
    public NewTopic deadLetterTopic() {
        return TopicBuilder.name(deadLetterTopic)
                .partitions(1)
                .replicas(replicationFactor)
                .config("retention.ms", String.valueOf(retentionMs))
                .build();
    }
}
